scala/verilog-parser/src/main/java/org/odfi/dev/verilog/parser/sv/fuzzy/SystemVerilogFuzzyParser.java
// $ANTLR 3.5.2 E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g 2014-09-16 17:59:47


package org.odfi.dev.verilog.parser.sv.fuzzy;

import org.odfi.dev.verilog.parser.parsing.*;

import java.util.LinkedList;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SystemVerilogFuzzyParser extends XQParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALWAYS", "ASSIGN", "AT", "BAND", 
		"BASE_DATA_TYPE", "BEGIN", "BNOT", "BOR", "BSLASH", "BXNOR", "BXOR", "COLON", 
		"COMMA", "COMMENTAR_LONG", "COMMENTAR_SHORT", "DIV", "DOT", "ELSE", "ELSEIF", 
		"END", "END_GENERATE", "EQ", "EQUAL", "EQ_CASE", "EXE_QUOTE", "FPATH", 
		"GE", "GENERATE", "GT", "IDENTIFIER", "IF", "INITIAL", "LAND", "LBRACK", 
		"LCURLY", "LE", "LNOT", "LOR", "LPAREN", "LT_", "MINUS", "MOD", "MODULE", 
		"NEWLINE", "NOT_EQ", "NOT_EQ_CASE", "NUMBER", "PLUS", "PORT_DIRECTION", 
		"POUND", "PPATH", "QUESTION", "RBRACK", "RCURLY", "RNAND", "RNOR", "RPAREN", 
		"SEMI", "SL", "SQUOTE", "SR", "STAR", "SV_DATA_TYPE", "TRIGGER", "VALUE_BASE", 
		"WS"
	};
	public static final int EOF=-1;
	public static final int ALWAYS=4;
	public static final int ASSIGN=5;
	public static final int AT=6;
	public static final int BAND=7;
	public static final int BASE_DATA_TYPE=8;
	public static final int BEGIN=9;
	public static final int BNOT=10;
	public static final int BOR=11;
	public static final int BSLASH=12;
	public static final int BXNOR=13;
	public static final int BXOR=14;
	public static final int COLON=15;
	public static final int COMMA=16;
	public static final int COMMENTAR_LONG=17;
	public static final int COMMENTAR_SHORT=18;
	public static final int DIV=19;
	public static final int DOT=20;
	public static final int ELSE=21;
	public static final int ELSEIF=22;
	public static final int END=23;
	public static final int END_GENERATE=24;
	public static final int EQ=25;
	public static final int EQUAL=26;
	public static final int EQ_CASE=27;
	public static final int EXE_QUOTE=28;
	public static final int FPATH=29;
	public static final int GE=30;
	public static final int GENERATE=31;
	public static final int GT=32;
	public static final int IDENTIFIER=33;
	public static final int IF=34;
	public static final int INITIAL=35;
	public static final int LAND=36;
	public static final int LBRACK=37;
	public static final int LCURLY=38;
	public static final int LE=39;
	public static final int LNOT=40;
	public static final int LOR=41;
	public static final int LPAREN=42;
	public static final int LT_=43;
	public static final int MINUS=44;
	public static final int MOD=45;
	public static final int MODULE=46;
	public static final int NEWLINE=47;
	public static final int NOT_EQ=48;
	public static final int NOT_EQ_CASE=49;
	public static final int NUMBER=50;
	public static final int PLUS=51;
	public static final int PORT_DIRECTION=52;
	public static final int POUND=53;
	public static final int PPATH=54;
	public static final int QUESTION=55;
	public static final int RBRACK=56;
	public static final int RCURLY=57;
	public static final int RNAND=58;
	public static final int RNOR=59;
	public static final int RPAREN=60;
	public static final int SEMI=61;
	public static final int SL=62;
	public static final int SQUOTE=63;
	public static final int SR=64;
	public static final int STAR=65;
	public static final int SV_DATA_TYPE=66;
	public static final int TRIGGER=67;
	public static final int VALUE_BASE=68;
	public static final int WS=69;

	// delegates
	public XQParser[] getDelegates() {
		return new XQParser[] {};
	}

	// delegators


	public SystemVerilogFuzzyParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SystemVerilogFuzzyParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SystemVerilogFuzzyParser.tokenNames; }
	@Override public String getGrammarFileName() { return "E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g"; }


	protected Object recoverFromMismatchedToken(IntStream input,
	                                            int ttype,
	                                            BitSet follow)
	    throws RecognitionException
	{   
	    throw new MismatchedTokenException(ttype, input);
	}   



	// $ANTLR start "module_name"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:55:1: module_name returns [String name] : ( . )* MODULE IDENTIFIER ;
	public final String module_name() throws RecognitionException {
		String name = null;


		XQToken IDENTIFIER1=null;

		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:56:3: ( ( . )* MODULE IDENTIFIER )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:57:3: ( . )* MODULE IDENTIFIER
			{
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:57:3: ( . )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==MODULE) ) {
					alt1=2;
				}
				else if ( ((LA1_0 >= ALWAYS && LA1_0 <= MOD)||(LA1_0 >= NEWLINE && LA1_0 <= WS)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:57:3: .
					{
					matchAny(input); 
					}
					break;

				default :
					break loop1;
				}
			}

			match(input,MODULE,FOLLOW_MODULE_in_module_name95); 
			IDENTIFIER1=(XQToken)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_module_name97); 

			                      name = (IDENTIFIER1!=null?IDENTIFIER1.getText():null);
			                     
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return name;
	}
	// $ANTLR end "module_name"



	// $ANTLR start "module_instanciations"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:67:1: module_instanciations returns [List<String> instances] options {greedy=false; } : ( ( . )* mi= module_instanciation[$instances] )* ;
	public final List<String> module_instanciations() throws RecognitionException {
		List<String> instances = null;



		    instances = new LinkedList<String>();
		  
		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:73:3: ( ( ( . )* mi= module_instanciation[$instances] )* )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:73:5: ( ( . )* mi= module_instanciation[$instances] )*
			{
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:73:5: ( ( . )* mi= module_instanciation[$instances] )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( ((LA3_0 >= ALWAYS && LA3_0 <= WS)) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:74:5: ( . )* mi= module_instanciation[$instances]
					{
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:74:5: ( . )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==IDENTIFIER) ) {
							alt2=2;
						}
						else if ( ((LA2_0 >= ALWAYS && LA2_0 <= GT)||(LA2_0 >= IF && LA2_0 <= WS)) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:74:5: .
							{
							matchAny(input); 
							}
							break;

						default :
							break loop2;
						}
					}

					pushFollow(FOLLOW_module_instanciation_in_module_instanciations179);
					module_instanciation(instances);
					state._fsp--;

					}
					break;

				default :
					break loop3;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return instances;
	}
	// $ANTLR end "module_instanciations"



	// $ANTLR start "module_instanciations_types"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:81:1: module_instanciations_types returns [List<String> instances] : ( ( . )* mi= module_instanciation[filteredInstances] )* ;
	public final List<String> module_instanciations_types() throws RecognitionException {
		List<String> instances = null;



		    instances = new LinkedList<String>();
		    LinkedList<String> filteredInstances= new LinkedList<String>();
		  
		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:87:3: ( ( ( . )* mi= module_instanciation[filteredInstances] )* )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:88:5: ( ( . )* mi= module_instanciation[filteredInstances] )*
			{
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:88:5: ( ( . )* mi= module_instanciation[filteredInstances] )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( ((LA5_0 >= ALWAYS && LA5_0 <= WS)) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:89:5: ( . )* mi= module_instanciation[filteredInstances]
					{
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:89:5: ( . )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==IDENTIFIER) ) {
							alt4=2;
						}
						else if ( ((LA4_0 >= ALWAYS && LA4_0 <= GT)||(LA4_0 >= IF && LA4_0 <= WS)) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:89:5: .
							{
							matchAny(input); 
							}
							break;

						default :
							break loop4;
						}
					}

					pushFollow(FOLLOW_module_instanciation_in_module_instanciations_types235);
					module_instanciation(filteredInstances);
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}


			    // Filter result
			    for (String instance: filteredInstances) {
			      if (!instances.contains(instance))
			        instances.add(instance);
			    }
			  
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return instances;
	}
	// $ANTLR end "module_instanciations_types"



	// $ANTLR start "module_instanciation"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:101:1: module_instanciation[List<String> instances] : type= IDENTIFIER ( POUND LPAREN parameter_connections RPAREN )? name= IDENTIFIER LPAREN port_connections RPAREN SEMI ;
	public final void module_instanciation(List<String> instances) throws RecognitionException {
		XQToken type=null;
		XQToken name=null;

		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:104:3: (type= IDENTIFIER ( POUND LPAREN parameter_connections RPAREN )? name= IDENTIFIER LPAREN port_connections RPAREN SEMI )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:106:5: type= IDENTIFIER ( POUND LPAREN parameter_connections RPAREN )? name= IDENTIFIER LPAREN port_connections RPAREN SEMI
			{
			type=(XQToken)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_module_instanciation279); 
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:107:5: ( POUND LPAREN parameter_connections RPAREN )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==POUND) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:107:6: POUND LPAREN parameter_connections RPAREN
					{
					match(input,POUND,FOLLOW_POUND_in_module_instanciation286); 
					match(input,LPAREN,FOLLOW_LPAREN_in_module_instanciation288); 
					pushFollow(FOLLOW_parameter_connections_in_module_instanciation290);
					parameter_connections();
					state._fsp--;

					match(input,RPAREN,FOLLOW_RPAREN_in_module_instanciation292); 
					}
					break;

			}

			name=(XQToken)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_module_instanciation302); 
			match(input,LPAREN,FOLLOW_LPAREN_in_module_instanciation309); 
			pushFollow(FOLLOW_port_connections_in_module_instanciation311);
			port_connections();
			state._fsp--;

			match(input,RPAREN,FOLLOW_RPAREN_in_module_instanciation313); 
			match(input,SEMI,FOLLOW_SEMI_in_module_instanciation315); 

			       System.out.println("In module instanciation "+(type!=null?type.getText():null)+" at "+(type!=null?type.getLine():0));
			       instances.add((type!=null?type.getText():null)); 
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "module_instanciation"



	// $ANTLR start "port_connections"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:1: port_connections : ( port_connection )? ( COMMA port_connection )* ;
	public final void port_connections() throws RecognitionException {
		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:17: ( ( port_connection )? ( COMMA port_connection )* )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:19: ( port_connection )? ( COMMA port_connection )*
			{
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:19: ( port_connection )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==DOT) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:19: port_connection
					{
					pushFollow(FOLLOW_port_connection_in_port_connections355);
					port_connection();
					state._fsp--;

					}
					break;

			}

			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:36: ( COMMA port_connection )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==COMMA) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:119:37: COMMA port_connection
					{
					match(input,COMMA,FOLLOW_COMMA_in_port_connections359); 
					pushFollow(FOLLOW_port_connection_in_port_connections361);
					port_connection();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "port_connections"



	// $ANTLR start "port_connection"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:121:1: port_connection : DOT port_name= IDENTIFIER LPAREN concatenable_expression RPAREN ;
	public final void port_connection() throws RecognitionException {
		XQToken port_name=null;

		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:121:17: ( DOT port_name= IDENTIFIER LPAREN concatenable_expression RPAREN )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:121:19: DOT port_name= IDENTIFIER LPAREN concatenable_expression RPAREN
			{
			match(input,DOT,FOLLOW_DOT_in_port_connection371); 
			port_name=(XQToken)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_port_connection375); 
			match(input,LPAREN,FOLLOW_LPAREN_in_port_connection377); 
			pushFollow(FOLLOW_concatenable_expression_in_port_connection379);
			concatenable_expression();
			state._fsp--;

			match(input,RPAREN,FOLLOW_RPAREN_in_port_connection381); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "port_connection"



	// $ANTLR start "parameter_connections"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:1: parameter_connections : ( parameter_connection )? ( COMMA parameter_connection )* ;
	public final void parameter_connections() throws RecognitionException {
		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:22: ( ( parameter_connection )? ( COMMA parameter_connection )* )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:24: ( parameter_connection )? ( COMMA parameter_connection )*
			{
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:24: ( parameter_connection )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==DOT) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:24: parameter_connection
					{
					pushFollow(FOLLOW_parameter_connection_in_parameter_connections390);
					parameter_connection();
					state._fsp--;

					}
					break;

			}

			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:46: ( COMMA parameter_connection )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==COMMA) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:124:47: COMMA parameter_connection
					{
					match(input,COMMA,FOLLOW_COMMA_in_parameter_connections394); 
					pushFollow(FOLLOW_parameter_connection_in_parameter_connections396);
					parameter_connection();
					state._fsp--;

					}
					break;

				default :
					break loop10;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parameter_connections"



	// $ANTLR start "parameter_connection"
	// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:125:1: parameter_connection : DOT param_name= IDENTIFIER LPAREN expression RPAREN ;
	public final void parameter_connection() throws RecognitionException {
		XQToken param_name=null;

		try {
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:125:21: ( DOT param_name= IDENTIFIER LPAREN expression RPAREN )
			// E:\\Common\\Projects\\git\\odfi-dev-hw\\scala\\verilog-parser\\src\\main\\java\\org\\odfi\\dev\\verilog\\parser\\sv\\fuzzy\\SystemVerilogFuzzy.g:125:23: DOT param_name= IDENTIFIER LPAREN expression RPAREN
			{
			match(input,DOT,FOLLOW_DOT_in_parameter_connection404); 
			param_name=(XQToken)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_parameter_connection408); 
			match(input,LPAREN,FOLLOW_LPAREN_in_parameter_connection410); 
			pushFollow(FOLLOW_expression_in_parameter_connection412);
			expression();
			state._fsp--;

			match(input,RPAREN,FOLLOW_RPAREN_in_parameter_connection414); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parameter_connection"


